--- a/Readit/Views/Posts/Index.cshtml
+++ b/Readit/Views/Posts/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Readit.Models.Post>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Readit";
 }
 
-<h2>Index</h2>
+<h2>Welcome to Readit!</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -47,9 +47,7 @@
             @Html.DisplayFor(modelItem => item.Author)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) 
         </td>
     </tr>
 }
