Add upVote and downVote to model

--- a/Readit/Views/Posts/Create.cshtml
+++ b/Readit/Views/Posts/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Readit.Models.Post
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Readit - Create Post";
 }
 
-<h2>Create</h2>
+<h2>Create a post for Readit</h2>
 
 
 @using (Html.BeginForm()) 
@@ -57,7 +57,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Home Page", "Index")
 </div>
 
 @section Scripts {
