--- a/Readit/Views/Posts/Index.cshtml
+++ b/Readit/Views/Posts/Index.cshtml
@@ -7,49 +7,19 @@
 <h2>Welcome to Readit!</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-primary btn-lg"})
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Body)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ExternalLink)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Author)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Body)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ExternalLink)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreateDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Author)
-        </td>
-        <td>
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) 
-        </td>
-    </tr>
+<br/>
+@foreach (var x in Model)
+{
+    <div class="readitPost row">
+        @if (x.ExternalLink != null)
+        {
+            <img class="img-responsive img-thumbnail col-md-1 col-md-offset-1" src=@x.ExternalLink/>
+        }
+        <div class="title col-md-9 col-md-push-2">@x.Title</div>
+        <div class="create col-md-9 col-md-push-2">Created: @(Math.Round((DateTime.Now.Subtract(x.CreateDate).TotalHours))) hours ago by @x.Author</div>
+        <div class="col-md-1">@Html.ActionLink("Details", "Details", new { id = x.Id }, new { @class = "btn btn-primary" }) </div>
+    </div>
 }
 
-</table>
