--- a/Readit/Views/Posts/Index.cshtml
+++ b/Readit/Views/Posts/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Readit.Models.Post>
+﻿@model IEnumerable<Readit.Models.PostVM>
 
 @{
     ViewBag.Title = "Readit";
@@ -18,8 +18,8 @@
             <img class="img-responsive img-thumbnail col-md-1 col-md-offset-1" src=@x.ExternalLink/>
         }
         <div class="title col-md-9 col-md-push-2">@x.Title</div>
-        <div class="create col-md-9 col-md-push-2">Created: @(Math.Round((DateTime.Now.Subtract(x.CreateDate).TotalHours))) hours ago by @x.Author</div>
-        <div class="col-md-1">@Html.ActionLink("Details", "Details", new { id = x.Id }, new { @class = "btn btn-primary" }) </div>
+        <div class="create col-md-9 col-md-push-2">Created: @x.TimeSinceCreation hours ago by @x.Author</div>
+        <div class="col-md-1">@Html.ActionLink("Details", "Details", new { id = x.PostId }, new { @class = "btn btn-primary" }) </div>
     </div>
 }
 
