--- a/Readit/Views/Posts/Index.cshtml
+++ b/Readit/Views/Posts/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Readit.Models.PostVM>
+﻿@using System.Diagnostics.Eventing.Reader
+@model IEnumerable<Readit.Models.PostVM>
 
 @{
     ViewBag.Title = "Readit";
@@ -15,9 +16,15 @@
     <div class="readitPost row">
         @if (x.ExternalLink != null)
         {
-            <img class="img-responsive img-thumbnail col-md-1 col-md-offset-1" src=@x.ExternalLink/>
+            <img class="img-responsive img-thumbnail col-md-1" src=@x.ExternalLink/>
         }
-        <div class="title col-md-9 col-md-push-2">@x.Title</div>
+        
+        <div class="col-md-9">
+            @{
+                object postDetails = $"/Posts/Details/{x.PostId}";
+            }
+            <a href=@postDetails class="title">@x.Title</a>
+        </div>
         <div class="create col-md-9 col-md-push-2">Created: @x.TimeSinceCreation hours ago by @x.Author</div>
         <div class="col-md-1">@Html.ActionLink("Details", "Details", new { id = x.PostId }, new { @class = "btn btn-primary" }) </div>
     </div>
