cut down default layout

--- a/Readit/Views/Posts/Index.cshtml
+++ b/Readit/Views/Posts/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Welcome to Readit!</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-primary btn-lg"})
+    @Html.ActionLink("Create New Post", "Create", null, new {@class = "btn btn-primary btn-lg"})
 </p>
 <br/>
 @foreach (var x in Model)
