Add Vote action to controller

--- a/Readit/Content/Site.css
+++ b/Readit/Content/Site.css
@@ -31,3 +31,13 @@ textarea {
     font-size: 4rem;
     color: darkred;
 }
+
+.up {
+    background-color: greenyellow;
+}
+
+.down {
+    background-color: lightcoral;
+}
+
+
