--- a/Readit/Views/Posts/Index.cshtml
+++ b/Readit/Views/Posts/Index.cshtml
@@ -14,19 +14,37 @@
 @foreach (var x in Model)
 {
     <div class="readitPost row">
+        <div class="col-md-1">
+            <div class="up glyphicon glyphicon-arrow-up btn btn-sm"></div>
+            <span class="score">@x.Score</span>
+            <div class="down glyphicon glyphicon-arrow-down btn btn-sm"></div>
+        </div>
         @if (x.ExternalLink != null)
         {
             <img class="img-responsive img-thumbnail col-md-1" src=@x.ExternalLink/>
         }
-        
+
         <div class="col-md-9">
             @{
                 object postDetails = $"/Posts/Details/{x.PostId}";
             }
             <a href=@postDetails class="title">@x.Title</a>
+            <div class="create">Created: @x.TimeSinceCreation hours ago by @x.Author</div>
         </div>
-        <div class="create col-md-9 col-md-push-2">Created: @x.TimeSinceCreation hours ago by @x.Author</div>
-        <div class="col-md-1">@Html.ActionLink("Details", "Details", new { id = x.PostId }, new { @class = "btn btn-primary" }) </div>
+        <div class="col-md-1">@Html.ActionLink("Details", "Details", new {id = x.PostId}, new {@class = "btn btn-primary"}) </div>
     </div>
 }
 
+@section scripts
+{
+    <script>
+        $.function({
+            
+
+
+
+
+
+        });
+    </script>
+}
