Up and down working and showing score!!!

--- a/Readit/Views/Posts/Index.cshtml
+++ b/Readit/Views/Posts/Index.cshtml
@@ -47,11 +47,9 @@
                 {
                     method: "POST",
                     url: "/Posts/Vote?postid=" + postId + "&up=" + isUp
-                }).done(data);
-                $(function() {
-                    $('.score').text(data);
-                });
-            });
+                   
+                }).done(function(data) { $(thisdiv).siblings(".score").text(data) });
+        });
         })
 
     </script>
