--- a/Readit/Views/Shared/_Layout.cshtml
+++ b/Readit/Views/Shared/_Layout.cshtml
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Readit - the front page of Kate's Computer</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    <div id="header"></div>
     <div class="container-fluid body-content">
         @RenderBody()
         <hr />
