--- a/Readit/Views/Shared/_Layout.cshtml
+++ b/Readit/Views/Shared/_Layout.cshtml
@@ -8,7 +8,12 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div id="header"></div>
+    <div id="header" class="row">
+        <div class="col-md-8 col-md-offset-1">Welcome to Readit!</div>
+        <div class="col-md-2">
+            @Html.ActionLink("Create New Post", "Create", null, new { @class = "btn btn-primary btn-lg" })
+        </div>
+    </div>
     <div class="container-fluid body-content">
         @RenderBody()
         <hr />
