--- a/Readit/Views/Posts/Details.cshtml
+++ b/Readit/Views/Posts/Details.cshtml
@@ -1,22 +1,33 @@
-﻿@model Readit.Models.Post
+﻿@using System.Text.RegularExpressions
+@using System.Web.UI.WebControls
+@model Readit.Models.Post
 
 @{
     ViewBag.Title = Model.Title;
 }
 
-<h2>@Model.Title</h2>
 
 <div class="row">
+    
+    <h2 class="col-md-offset-1 col-me-10">@Model.Title</h2>
     <div class="create col-md-offset-1">Created: @ViewBag.TimeSinceCreation hours ago by @Model.Author</div>
 
-    <div class="col-md-offset-1">
+    <div class="detailcontent col-md-offset-1">
         @if (Model.Body != null)
         {
             @Html.DisplayFor(model => model.Body)
         }
         else
         {
-            @Html.DisplayFor(model => model.ExternalLink)
+            Regex imgRegex = new Regex(@"(jpg|png|gif|bmp)$");
+
+            if (imgRegex.IsMatch(Model.ExternalLink))
+            {
+                <img class="col-md-offset-1 col-md-8 img-responsive img-thumbnail" src=@Model.ExternalLink/>
+                <br/>
+            }
+            <div class="col-md-8 col-md-offset-2"><a href="@Model.ExternalLink">@Model.ExternalLink</a>
+            </div>
         }
     </div>
 </div>
@@ -25,5 +36,5 @@
 
 
 <p>
-    @Html.ActionLink("Back Home", "Index")
+    @Html.ActionLink("Back Home", "Index", null, new { @class = "btn btn-primary btn-sm" })
 </p>
