--- a/Readit/Views/Posts/Details.cshtml
+++ b/Readit/Views/Posts/Details.cshtml
@@ -8,7 +8,7 @@
 
 
 <div class="row">
-    
+
     <h2 class="col-md-offset-1 col-me-10">@Model.Title</h2>
     <div class="create col-md-offset-1">Created: @ViewBag.TimeSinceCreation hours ago by @Model.Author</div>
 
@@ -17,16 +17,16 @@
         {
             @Html.DisplayFor(model => model.Body)
         }
-        else
-        {
-            Regex imgRegex = new Regex(@"(jpg|png|gif|bmp)$");
+        @{
+            Regex imgRegex = new Regex("(jpg|png|gif|bmp)$");
 
             if (imgRegex.IsMatch(Model.ExternalLink))
             {
                 <img class="col-md-offset-1 col-md-8 img-responsive img-thumbnail" src=@Model.ExternalLink/>
                 <br/>
             }
-            <div class="col-md-8 col-md-offset-2"><a href="@Model.ExternalLink">@Model.ExternalLink</a>
+            <div class="col-md-8 col-md-offset-2">
+                <a href="@Model.ExternalLink">@Model.ExternalLink</a>
             </div>
         }
     </div>
