Made "Welcome" on Layout a link to index

--- a/Readit/Views/Shared/_Layout.cshtml
+++ b/Readit/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="header" class="row">
-        <div class="col-md-8 col-md-offset-1">Welcome to Readit!</div>
+        <div class="col-md-8 col-md-offset-1">@Html.ActionLink("Welcome to Readit!", "Index")</div>
         <div class="col-md-2">
             @Html.ActionLink("Create New Post", "Create", null, new { @class = "btn btn-primary btn-lg" })
         </div>
