Moved logic from index.cshtml to model/controller.

--- a/Readit/Views/Posts/Details.cshtml
+++ b/Readit/Views/Posts/Details.cshtml
@@ -36,6 +36,11 @@
 
 @Html.RenderPartial("~/Views/Comments/Index.cshtml", Model.Id);
 
+@{ Html.RenderPartial(
+       "~/Views/Comments/Index.cshtml",
+       new {postID = Model.Id}) };
+}
+@Html.RenderAction("")
 
 <p>
     @Html.ActionLink("Back Home", "Index", null, new { @class = "btn btn-primary btn-sm" })
