Comment adding working, but issue when listing comments and trying to make partial CreateComment on comment list

--- a/Readit/Views/Posts/CommentList.cshtml
+++ b/Readit/Views/Posts/CommentList.cshtml
@@ -41,8 +41,8 @@
         </td>
     </tr>
 }
-
     
 </table>
 
-@Html.Partial("CreateComment", (int)ViewBag.PostId)
+@*@ViewBag.PostId = ViewBag.PostId;  // why is this null here?!?!?!
+@Html.Partial("CreateComment", (int)ViewBag.PostId)*@
