Fixed viewbag issue for PostId

--- a/Readit/Views/Posts/CommentList.cshtml
+++ b/Readit/Views/Posts/CommentList.cshtml
@@ -44,5 +44,5 @@
     
 </table>
 
-@*@ViewBag.PostId = ViewBag.PostId;  // why is this null here?!?!?!
-@Html.Partial("CreateComment", (int)ViewBag.PostId)*@
+
+@Html.Partial("CreateComment", (int)ViewBag.PostId)
