--- a/Readit/Views/Shared/CreateComment.cshtml
+++ b/Readit/Views/Shared/CreateComment.cshtml
@@ -4,5 +4,5 @@
     @Html.Hidden("PostId", Model)
     <span>Comment: </span> @Html.TextBox("Body")
     <span>Your Name: </span> @Html.TextBox("Author")
-    <input type="submit" value="Add Comment" class="btn btn-default"/>
+    <input type="submit" value="Add Comment" class="btn btn-info"/>
 }
